--- a/individual-assignment-6/Polyline/app/src/main/AndroidManifest.xml
+++ b/individual-assignment-6/Polyline/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         </activity>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAyiHbOzE0e4FKs9wRg6ZV81TyPxPEk0Oo" />
+            android:value="${MAPS_API_KEY}" />
     </application>
 
 </manifest>
